--- a/config/acf/README.html
+++ b/config/acf/README.html
@@ -1,4 +1,10 @@
-<h1 id="advanced-custom-fields">Advanced Custom Fields</h1>
+<html>
+      <head>
+        <meta charset="UTF-8">
+        <title>README.md</title>
+      </head>
+      <body>
+        <h1 id="advanced-custom-fields">Advanced Custom Fields</h1>
 <p>Welcome to the official Advanced Custom Fields repository on GitHub. ACF is a WordPress plugin used to take full control of your edit screens &amp; custom field data.</p>
 <p>Looking for ACF version 4? Please use the <a href="https://github.com/elliotcondon/acf">previous ACF repository</a>.</p>
 <p>Upgrading from ACF version 4? Please read our <a href="https://www.advancedcustomfields.com/resources/upgrading-v4-v5/">Upgrading from v4 to v5 guide</a>.</p>
@@ -14,3 +20,6 @@ Support can take place in the appropriate channels:</p>
 <p>These channels can be accessed from our <a href="https://support.advancedcustomfields.com/">support website</a>.</p>
 <h2 id="contributing">Contributing</h2>
 <p>If you have a patch, or stumbled upon an issue with ACF core, you can contribute this back to the code. Please create a new github issue with as much information as possible.</p>
+
+      </body>
+    </html>
